--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,10 +1,35 @@
 {
+	"name": "migueventos",
+	"description": "Tp4-Desarrollo-de-Sistemas",
+	"scripts": {
+		"build": "rimraf dist && pnpm tsc",
+		"start": "node dist/index.js",
+		"clean": "rimraf dist",
+		"dev": "tsx --watch src/index.ts",
+		"db:migrate": "prisma migrate dev --schema src/db/schema",
+		"db:generate": "prisma generate --no-engine --schema src/db/schema"
+  	},
 	"dependencies": {
+		"@prisma/client": "^6.12.0",
 		"bcrypt": "^6.0.0",
 		"cors": "^2.8.5",
-		"express": "^5.1.0",
-		"jsonwebtoken": "^9.0.2",
-		"jws": "^4.0.0",
-		"prisma": "^6.16.3"
+		"dotenv": "^16.5.0",
+		"express": "5.1.0",
+		"jsonwebtoken": "^9.0.2"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/cors": "^2.8.19",
+		"@types/express": "^5.0.1",
+		"@types/jsonwebtoken": "^9.0.9",
+		"@types/node": "^22.14.0",
+		"concurrently": "^9.1.2",
+		"prisma": "^6.12.0",
+		"rimraf": "^6.0.1",
+		"tsx": "^4.19.3",
+		"typescript": "^5.8.3"
+	},
+	"prisma": {
+		"schema": "src/db/schema"
 	}
 }
