--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,24 +8,30 @@
 		"dev": "tsx --watch src/index.ts",
 		"db:migrate": "prisma migrate dev --schema src/db/schema",
 		"db:generate": "prisma generate --no-engine --schema src/db/schema"
-  	},
+	},
 	"dependencies": {
 		"@prisma/client": "^6.12.0",
 		"bcrypt": "^6.0.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
 		"express": "5.1.0",
-		"jsonwebtoken": "^9.0.2"
+		"jsonwebtoken": "^9.0.2",
+		"multer": "^2.0.2"
 	},
 	"devDependencies": {
+		"@jest/globals": "^30.2.0",
 		"@types/bcrypt": "^5.0.2",
 		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.1",
+		"@types/jest": "^30.0.0",
 		"@types/jsonwebtoken": "^9.0.9",
+		"@types/multer": "^2.0.0",
 		"@types/node": "^22.14.0",
 		"concurrently": "^9.1.2",
+		"jest": "^30.2.0",
 		"prisma": "^6.12.0",
 		"rimraf": "^6.0.1",
+		"ts-jest": "^29.4.5",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.3"
 	},
