--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,8 @@
 		"start": "node dist/index.js",
 		"clean": "rimraf dist",
 		"dev": "tsx --watch src/index.ts",
+		"test": "jest",
+		"test:watch": "jest --watch",
 		"db:migrate": "prisma migrate dev --schema src/db/schema",
 		"db:generate": "prisma generate --no-engine --schema src/db/schema"
 	},
@@ -27,10 +29,12 @@
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/multer": "^2.0.0",
 		"@types/node": "^22.14.0",
+		"@types/supertest": "^6.0.3",
 		"concurrently": "^9.1.2",
 		"jest": "^30.2.0",
 		"prisma": "^6.12.0",
 		"rimraf": "^6.0.1",
+		"supertest": "^7.1.4",
 		"ts-jest": "^29.4.5",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.3"
