--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,8 @@
 		"dev": "tsx --watch src/index.ts",
 		"test": "jest",
 		"test:watch": "jest --watch",
+		"test:setup": "dotenv -e .env.test -- prisma migrate deploy --schema src/db/schema",
+		"test:full": "pnpm test:setup && pnpm test",
 		"db:migrate": "prisma migrate dev --schema src/db/schema",
 		"db:generate": "prisma generate --no-engine --schema src/db/schema"
 	},
@@ -15,7 +17,6 @@
 		"@prisma/client": "^6.12.0",
 		"bcrypt": "^6.0.0",
 		"cors": "^2.8.5",
-		"dotenv": "^16.5.0",
 		"express": "5.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^2.0.2"
@@ -31,6 +32,8 @@
 		"@types/node": "^22.14.0",
 		"@types/supertest": "^6.0.3",
 		"concurrently": "^9.1.2",
+		"dotenv": "^16.6.1",
+		"dotenv-cli": "^11.0.0",
 		"jest": "^30.2.0",
 		"prisma": "^6.12.0",
 		"rimraf": "^6.0.1",
