--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,8 +6,11 @@
 		"start": "node dist/index.js",
 		"clean": "rimraf dist",
 		"dev": "tsx --watch src/index.ts",
-		"test": "jest",
-		"test:watch": "jest --watch",
+		"test": "cross-env NODE_ENV=test jest --runInBand --forceExit",
+		"test:watch": "jest --watch --runInBand",
+		"test:setup": "dotenv -e .env.test -- prisma migrate deploy --schema src/db/schema && dotenv -e .env.test -- prisma generate --schema src/db/schema",
+		"test:full": "pnpm test:setup && pnpm test",
+		"test:clean": "rm -f ../bd-test && pnpm test:setup",
 		"db:migrate": "prisma migrate dev --schema src/db/schema",
 		"db:generate": "prisma generate --no-engine --schema src/db/schema"
 	},
@@ -15,7 +18,6 @@
 		"@prisma/client": "^6.12.0",
 		"bcrypt": "^6.0.0",
 		"cors": "^2.8.5",
-		"dotenv": "^16.5.0",
 		"express": "5.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^2.0.2"
@@ -31,6 +33,9 @@
 		"@types/node": "^22.14.0",
 		"@types/supertest": "^6.0.3",
 		"concurrently": "^9.1.2",
+		"cross-env": "^10.1.0",
+		"dotenv": "^16.6.1",
+		"dotenv-cli": "^11.0.0",
 		"jest": "^30.2.0",
 		"prisma": "^6.12.0",
 		"rimraf": "^6.0.1",
